# tibanna_ff

./: .gitignore  .travis.yml  CHANGELOG.rst  JvaNHA4XB406.input.json  MANIFEST.in  Makefile  README.md  ff.html  publish  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tb.html
.github/workflows/: main-deploy-docs.yml  main-deploy-pony-data.yml  main-deploy-pony-webdev.yml  main-deploy-zebra-cgap.yml  main-deploy-zebra-cgapwolf.yml  main-deploy.yml  main-publish.yml  main-run-tests.yml  main.yml
docs/: Makefile  behavior.rst  cli.rst  code.rst  conf.py  dev.rst  execution_json.rst  index.rst  installation.rst  lambda.rst  news.rst  overview.rst  permissions.rst  pony.rst  production.rst  qc_smaht.rst  requirements.txt  tests.rst  zebra.rst
scripts/: publish-pypi
test_json/pony/: bedtobeddb.json  bedtobeddb_opendata.json  bwa-mem.json  fastqc.json  madqc.json  md5.json
test_json/pony_archive/: addfrag.json  bed2beddb.json  bg2bw.json  bwa-instance.json  bwa-instance2.json  bwa-instance3.json  bwa.json  bwa_dependency.json  bwa_new.json  bwa_new_mm10.json  chip_seq_alignment.json  encode_atacseq-aln.json  encode_atacseq-aln2.json  encode_atacseq-aln3-rep1.json  encode_atacseq-aln3-rep2.json  encode_atacseq-postaln.json  encode_atacseq-postaln2.json  encode_atacseq-postaln3.json  encode_atacseq.json  encode_chipseq.json  encode_chipseq_aln_chip.json  encode_chipseq_aln_chip2.json  encode_chipseq_aln_chip3.json  encode_chipseq_aln_chip_mm.json  encode_chipseq_aln_ctl.json  encode_chipseq_aln_ctl2.json  encode_chipseq_aln_ctl3.json  encode_chipseq_aln_ctl_mm.json  encode_chipseq_noctl.json  encode_chipseq_postaln.json  encode_chipseq_postaln2.json  encode_chipseq_postaln3.json  encode_chipseq_postaln_mmtf.json  encode_chipseq_se.json  fastqc-instance.json  fastqc-instance2.json  hic_processing_bam-2.pony.json  hic_processing_bam-3.pony.json  hic_processing_bam-4.pony.json  hic_processing_bam-5.pony.json  (+28 more)
test_json/zebra/: bwa-check-subnet2.json  bwa-check.json  fastqc.json  md5.json
tests/post-deployment/: test_pony.py  test_zebra.py
tests/post_deployment/: test_pony.py  test_pony_errors.py  test_zebra.py  test_zebra_errors.py
tests/post_deployment/events/zebra/: bwa.json
tests/tibanna/ffcommon/: conftest.py  test_exceptions.py  test_extra_files.py  test_file_format.py  test_generic_qc_utils.py  test_input_files.py  test_misc_utils.py  test_portal_utils.py  test_qc.py  test_vars.py  test_wfr.py
tests/tibanna/pony/: conftest.py  test_fourfront_updater.py  test_pony_utils.py  test_pony_utils_post.py  test_start_run.py
tests/tibanna/pony/check_task/: event.json
tests/tibanna/pony/run_task/: event_fail.json
tests/tibanna/pony/run_workflow/: test_handler.py
tests/tibanna/pony/start_run/: event-nestedarray.json  event.json  event_dependency.json  event_dependency_fail.json  event_fail.json  event_fixedname.json  event_hicprocessingbam_customfield_wALL.json  event_hicprocessingbam_customfield_wArgname.json  event_hicprocessingpartb.json  event_md5-mount.json  event_md5.json  event_md5_comprehensive.json  event_metadata_only.json  event_repliseq.json
tests/tibanna/pony/status_wfr/: event.json
tests/tibanna/pony/update_ffmeta/: event.json  event_bed2multivec.json  event_chipseq.json  event_extra_md5.json  event_fastq_first_line.json  event_fastqc.json  event_fastqc2.json  event_hicbam.json  event_imargi.json  event_imargi2.json  event_madqc.json  event_mcool.json  event_metadata_2.json  event_metadataonly.json  event_newmd5.json  (+5 more)
tests/tibanna/smaht/: test_iam_utils.py
tests/tibanna/zebra/: conftest.py  test_iam_utils.py  test_zebra_utils.py  test_zebra_utils_post.py
tibanna_4dn/: __main__.py  core.py  iam_utils.py  pony_utils.py  start_run.py  stepfunction.py  stepfunction_cost_updater.py  update_ffmeta.py  vars.py
tibanna_4dn/lambdas/: __init__.py  requirements.txt  run_workflow.py  start_run.py  update_cost.py  update_ffmeta.py  validate_md5_s3_initiator.py  validate_md5_s3_trigger.py
tibanna_cgap/: __main__.py  core.py  cw_utils.py  iam_utils.py  start_run.py  stepfunction.py  stepfunction_cost_updater.py  vars.py  zebra_utils.py
tibanna_cgap/lambdas/: __init__.py  requirements.txt  run_workflow.py  start_run.py  update_cost.py  update_ffmeta.py  validate_md5_s3_initiator.py  validate_md5_s3_trigger.py
tibanna_ffcommon/: _version.py  config.py  core.py  exceptions.py  extra_files.py  file_format.py  generic_qc_utils.py  iam_utils.py  input_files.py  metric_utils.py  misc_utils.py  portal_utils.py  qc.py  stepfunction.py  vars.py  wfr.py
tibanna_smaht/: __main__.py  check_task.py  core.py  cw_utils.py  iam_utils.py  start_run.py  stepfunction.py  tiger_utils.py  update_ffmeta.py  vars.py
tibanna_smaht/lambdas/: __init__.py  check_task.py  requirements.txt  run_task.py  start_run.py  update_cost.py  update_ffmeta.py
(+9 files in other folders)
