[tool.poetry]
name = "tibanna_ff"
version = "3.5.0"
description = "Tibanna runs portable pipelines (in CWL/WDL) on the AWS Cloud."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.md"
keywords = ["tibanna"]
homepage = "http://github.com/4dn-dcic/tibanna_ff"
repository = "http://github.com/4dn-dcic/tibanna_ff.git"
packages = [
  { include="tibanna_ffcommon", from="." },
  { include="tibanna_4dn", from="." },
  { include="tibanna_cgap", from="." },
  { include="tibanna_smaht", from="." }
]
# The following is needed so that we can extract the version at runtime
include = ["pyproject.toml"]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: POSIX :: Linux',

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate whether you support Python 2, Python 3 or both.
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12'
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
tibanna = "^5.4.1"
dcicutils = "^8.13.3"
boto3 = "^1.34.147"
botocore = "^1.34.147"
requests = "2.27.1" # Pin version as 2.28.* currently leads to warnings when running cwltool
tomlkit = "^0.11.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
boto3-stubs = "^1.34.147"
botocore-stubs = "^1.34.147"
invoke = "^2.2.0"
flake8 = "^3.7.9"

# PyTest and its auxiliary support files
# Need pytest-redis 3.0.2 or higher for pytest 7.4.2 (or higher).
pytest = "^7.4.2"
pytest-redis = "^3.0.2"
pytest-cov = "2.3.1"
pytest-parallel = "0.1.0"
pycodestyle= "2.5.0"
mock = "4.0"
pytest-mock = "3.1.1"

coverage = {extras = ["toml"], version = "^6.3.2"}

# Docs build dependencies
Sphinx = "^3.3.0"
sphinx-click = "^2.5.0"
sphinx-rtd-theme = "0.5.0"  # Do we have a good reason to pin this? -kmp 9-Nov-2020

[tool.poetry.scripts]
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"
tibanna_4dn = "tibanna_4dn.__main__:main"
tibanna_cgap = "tibanna_cgap.__main__:main"
tibanna_smaht = "tibanna_smaht.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/__pycache__/*", "*/tests/*", "*/dist/*", "*/.eggs/*"]
include = ["*/tibanna_4dn/*", "*/tibanna_cgap/*", "*/tibanna_ffcommon/*", "*/tibanna_smaht/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report term --cov-fail-under 2 -rxs"
